[gd_scene load_steps=11 format=3 uid="uid://diwuois3yefss"]

[ext_resource type="Texture2D" uid="uid://bo8axi35l5kpb" path="res://Pacman_Tileset.png" id="1_8bvj8"]
[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_do08x"]
[ext_resource type="AudioStream" uid="uid://i8fi0snl2ri" path="res://Assets/Audio/SFX/Death.ogg" id="3_os1wu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3hm07"]
atlas = ExtResource("1_8bvj8")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yjqf"]
atlas = ExtResource("1_8bvj8")
region = Rect2(64, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_64hqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hm07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yjqf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r6ijp"]
size = Vector2(14, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vn5r8"]
size = Vector2(2, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_nwunp"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sm5cx"]
radius = 9.05539

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_do08x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_64hqd")
autoplay = "default"
frame_progress = 0.975017

[node name="Raycasts" type="Node2D" parent="."]

[node name="ShapeCast2D_up" type="ShapeCast2D" parent="Raycasts"]
shape = SubResource("RectangleShape2D_r6ijp")
target_position = Vector2(0, -9)

[node name="ShapeCast2D_down" type="ShapeCast2D" parent="Raycasts"]
shape = SubResource("RectangleShape2D_r6ijp")
target_position = Vector2(0, 9)

[node name="ShapeCast2D_left" type="ShapeCast2D" parent="Raycasts"]
shape = SubResource("RectangleShape2D_vn5r8")
target_position = Vector2(-9, 0)

[node name="ShapeCast2D_right" type="ShapeCast2D" parent="Raycasts"]
shape = SubResource("RectangleShape2D_vn5r8")
target_position = Vector2(9, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nwunp")

[node name="PowerDotDelay" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="CloseToFinishPowerDot" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource("CircleShape2D_sm5cx")
debug_color = Color(0.7, 0.120041, 0.114818, 0.42)

[node name="SFX-Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_os1wu")
bus = &"SFX"

[connection signal="timeout" from="PowerDotDelay" to="." method="_on_power_dot_delay_timeout"]
[connection signal="timeout" from="CloseToFinishPowerDot" to="." method="_on_close_to_finish_power_dot_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_enemy_detector_body_entered"]
